removed padding and set min height to 30px to avoid stretching

--- a/blocks/pop-up/__input-error/pop-up__input-error.css
+++ b/blocks/pop-up/__input-error/pop-up__input-error.css
@@ -1,12 +1,12 @@
 .pop-up__input-error {
   display: block;
   opacity: 0;
-  padding: 5px 0 13px;
   width: 238px;
   font-size: 12px;
   line-height: 15px;
   color: #ff0000;
-  min-height: 12px;
+  min-height: 30px;
+  margin-top: 5px;
 }
 
 @media screen and (min-width: 624px) {
